--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html, body {
 .submit {
     width: 100%;
     height: 3rem;
-    background-color: #409623;
+    background-color: #07f8e4;
     color: #f2f2f2;
     border: none;
     outline: none;
