--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #6bc04f;
+    background-color: #62257a;
 }
 
 .container {
@@ -49,7 +49,7 @@ html, body {
     width: 100%;
     height: 3rem;
     background-color: #07f8e4;
-    color: #f2f2f2;
+    color: #000000;
     border: none;
     outline: none;
     margin-bottom: 1rem;
